<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_name">Popularin</string>
    <string name="account">Akun</string>
    <string name="add">Buat</string>
    <string name="add_review">Buat Ulasan</string>
    <string name="airing">Tayang</string>
    <string name="all">Semua</string>
    <string name="bio">Bio</string>
    <string name="cancel">Batal</string>
    <string name="cast">Pemain</string>
    <string name="comment">Komen</string>
    <string name="comment_reported">Komen di laporkan</string>
    <string name="comment_reporter">Pelapor Komen</string>
    <string name="confirm_password">Konfirmasi Sandi</string>
    <string name="credit">Kredit</string>
    <string name="crew">Kru</string>
    <string name="current_password">Kata Sandi Lama</string>
    <string name="delete">Hapus</string>
    <string name="detail">Detail</string>
    <string name="edit">Ubah</string>
    <string name="edit_password">Ubah Kata Sandi</string>
    <string name="edit_password_welcome_message">Hei,\nButuh sandi baru?</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="edit_profile_welcome_message">Hei,\nAda yang salah?</string>
    <string name="edit_review">Ubah Ulasan</string>
    <string name="email">Email</string>
    <string name="empty_account">Masuk atau daftar terlebih dahulu untuk\nmenikmati semua fitur Popularin!</string>
    <string name="empty_airing_film">Film yang sedang tayang di bioskop\nakan tampil di sini.</string>
    <string name="empty_comment">Belum ada komen untuk ulasan ini.\nMau jadi yang pertama?</string>
    <string name="empty_comment_reporter">YAY!\nKomen ini terbebas dari indikasi konten negatif.</string>
    <string name="empty_credit_film_as_cast">Belum membintangi film apapun.</string>
    <string name="empty_credit_film_as_crew">Belum membuat film apapun.</string>
    <string name="empty_film_favorite">Belum ada yang memfavoritkan film ini.\nMau jadi yang pertama?</string>
    <string name="empty_film_favorite_from_following">Belum ada teman kamu yang memfavoritkan film ini.</string>
    <string name="empty_film_review">Belum ada yang mengulas film ini.\nMau jadi yang pertama?</string>
    <string name="empty_film_review_from_following">Belum ada teman kamu yang mengulas film ini.</string>
    <string name="empty_film_watchlist">Belum ada yang ingin menonton film ini.\nMau jadi yang pertama?</string>
    <string name="empty_film_watchlist_from_following">Belum ada teman kamu yang ingin menonton film ini.</string>
    <string name="empty_liked_film_review">Belum ada ulasan dari film ini yang kamu sukai.</string>
    <string name="empty_mutual">Kamu dan dia belum bermutual dengan siapapun.</string>
    <string name="empty_review">Ulasan dari semua pengguna Popularin\nakan tampil di sini.</string>
    <string name="empty_review_reporter">YAY!\nUlasan ini terbebas dari indikasi konten negatif.</string>
    <string name="empty_review_like">Belum ada yang menyukai ulasan ini.\nMau jadi yang pertama?</string>
    <string name="empty_review_like_from_following">Belum ada teman kamu yang menyukai ulasan ini.</string>
    <string name="empty_search_result">UPS! Apa yang kamu cari tidak di temukan.</string>
    <string name="empty_self_favorite_film">Kamu belum mempunyai film favorit.</string>
    <string name="empty_self_film_review">Belum ada ulasan dari kamu untuk film ini.</string>
    <string name="empty_self_follower">Kamu belum mempunyai pengikut.</string>
    <string name="empty_self_following">Kamu belum mengikuti siapapun.</string>
    <string name="empty_self_point">Kamu belum mempunyai point.</string>
    <string name="empty_self_review">Kamu belum mempunyai ulasan.</string>
    <string name="empty_self_watchlist_film">Kamu belum mempunyai daftar film\nyang ingin ditonton.</string>
    <string name="empty_timeline">Ulasan dari pengguna yang kamu ikuti\nakan tampil di sini.</string>
    <string name="empty_user_favorite_film">Pengguna belum mempunyai film favorit.</string>
    <string name="empty_user_follower">Pengguna belum mempunyai pengikut.</string>
    <string name="empty_user_following">Pengguna belum mengikuti siapapun.</string>
    <string name="empty_user_point">Pengguna belum mempunyai point.</string>
    <string name="empty_user_review">Pengguna belum mempunyai ulasan.</string>
    <string name="empty_user_watchlist">Pengguna belum mempunyai daftar film\nyang ingin ditonton.</string>
    <string name="failed_retrieve_metadata">Gagal mendapatkan metadata film</string>
    <string name="favorite">Favorit</string>
    <string name="favorited_by">Di Favoritkan Oleh</string>
    <string name="film_added_to_favorite">Film di tambahkan ke favorit</string>
    <string name="film_added_to_watchlist">Film di tambahkan ke watchlist</string>
    <string name="film_removed_from_favorite">Film di hapus dari favorit</string>
    <string name="film_removed_from_watchlist">Film di hapus dari watchlist</string>
    <string name="follow">Ikuti</string>
    <string name="follow_me">Mengikuti Kamu</string>
    <string name="follower">Pengikut</string>
    <string name="following">Mengikuti</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="general_error">Gagal mengirim permintaan kamu, coba beberapa saat lagi ya!</string>
    <string name="genre">Genre</string>
    <string name="genre_action">Aksi</string>
    <string name="genre_adventure">Petualangan</string>
    <string name="genre_animation">Animasi</string>
    <string name="genre_comedy">Komedi</string>
    <string name="genre_crime">Kejahatan</string>
    <string name="genre_documentary">Dokumenter</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Keluarga</string>
    <string name="genre_fantasy">Fantasi</string>
    <string name="genre_fiction">Fiksi</string>
    <string name="genre_history">Sejarah</string>
    <string name="genre_horror">Horor</string>
    <string name="genre_mystery">Misteri</string>
    <string name="genre_romance">Romansa</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">Perang</string>
    <string name="home">Home</string>
    <string name="input_comment_hint">Masukkan komen...</string>
    <string name="input_review_hint">Masukkan ulasan...</string>
    <string name="invalid_current_password">Kata sandi lama kamu salah, coba periksa lagi ya!</string>
    <string name="invalid_password">Kata sandi kamu salah, coba periksa lagi ya!</string>
    <string name="invalid_username">Username tidak terdaftar, coba periksa lagi ya!</string>
    <string name="like">Suka?</string>
    <string name="liked">Disukai</string>
    <string name="liked_by">Disukai Oleh</string>
    <string name="loading">Tunggu Ya...</string>
    <string name="metadata">Metadata</string>
    <string name="mutual">Mutual</string>
    <string name="network_error">Coba periksa koneksi internet mu ya!</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="nsfw_comment">Komen ini mengandung konten sensitif. Klik untuk menampilkannya.</string>
    <string name="nsfw_review">Ulasan ini mengandung konten sensitif. Klik untuk menampilkannya.</string>
    <string name="overview">Sinopsis</string>
    <string name="password">Kata Sandi</string>
    <string name="pick">Pilih</string>
    <string name="pick_report_category_dialog_title">Pilih Kategori Laporan</string>
    <string name="point">Point</string>
    <string name="press_once_more_to_exit">Klik sekali lagi untuk keluar</string>
    <string name="profile">Profil</string>
    <string name="rating">Rating</string>
    <string name="recent_favorite">Favorit Terbaru</string>
    <string name="recent_review">Ulasan Terbaru</string>
    <string name="report">Lapor</string>
    <string name="report_category_1">Mengandung Jalan Cerita</string>
    <string name="report_category_2">Mengandung Spam</string>
    <string name="report_category_3">Mengandung SARA</string>
    <string name="report_category_4">Mengandung Ancaman</string>
    <string name="report_category_5">Mengandung Pornografi</string>
    <string name="review">Ulasan</string>
    <string name="review_added">Ulasan di buat</string>
    <string name="review_deleted">Ulasan di hapus</string>
    <string name="review_reported">Ulasan di laporkan</string>
    <string name="review_reporter">Pelapor Ulasan</string>
    <string name="review_updated">Ulasan di ubah</string>
    <string name="runtime">Durasi</string>
    <string name="save_password">Simpan Kata Sandi</string>
    <string name="save_profile">Simpan Profil</string>
    <string name="search">Cari</string>
    <string name="search_hint">Cari apa?</string>
    <string name="self">Saya</string>
    <string name="server_error">Ada kesalahan dalam server, coba beberapa saat lagi ya!</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_in_welcome_message">Halo,\nSelamat Datang!</string>
    <string name="sign_out">Keluar</string>
    <string name="sign_up">Daftar</string>
    <string name="sign_up_welcome_message">Halo,\nSelamat Bergabung!</string>
    <string name="social">Sosial</string>
    <string name="username">Username</string>
    <string name="validate_alpha_dash">Username tidak bisa mengandung spasi</string>
    <string name="validate_confirm_password_un_match_new_password">Kata sandi baru dan konfirmasi tidak sama</string>
    <string name="validate_email_format">Format alamat email tidak sesuai</string>
    <string name="validate_new_password_length">Kata sandi baru minimal 8 karakter</string>
    <string name="validate_new_password_match_current_password">Kata sandi baru dan lama harus berbeda</string>
    <string name="validate_password_length">Kata sandi minimal 8 karakter</string>
    <string name="validate_rating">Rating harus di isi</string>
    <string name="validate_review">Ulasan harus di isi</string>
    <string name="validate_username_length">Username minimal 5 karakter</string>
    <string name="validate_username_match_password">Kata sandi dan username harus berbeda</string>
    <string name="watch_date">Tanggal Tonton</string>
    <string name="watchlist">Watchlist</string>
    <string name="watchlisted_by">Ingin di Tonton Oleh</string>
    <string name="zero_favorite">0 Favorit</string>
    <string name="zero_rating">0/5</string>
    <string name="zero_review">0 Ulasan</string>
    <string name="zero_watchlist">0 Watchlist</string>
</resources>