<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anchor_fep_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.EditProfileActivity">

    <TextView
        android:id="@+id/text_fep_welcome"
        style="@style/TextWelcomePrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_welcome_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/full_name"
        app:startIconDrawable="@drawable/ic_outline_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_fep_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_outline_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_fep_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_outline_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_fep_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_fep_save_profile"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/save_profile" />

    <Button
        android:id="@+id/button_fep_edit_password"
        style="@style/ButtonTextDanger"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/edit_password" />

</LinearLayout>