<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anchor_asu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/text_asu_welcome"
        style="@style/TextWelcomePrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_welcome_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/full_name"
        app:startIconDrawable="@drawable/ic_outline_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_asu_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_outline_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_asu_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_outline_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_asu_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_asu_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_asu_sign_up"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/sign_up" />

</LinearLayout>