<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anchor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.EditProfileActivity">

    <TextView
        android:id="@+id/welcome_message"
        style="@style/TextWelcomePrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_password_welcome_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/current_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/new_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_password_button"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/save_password" />

</LinearLayout>