<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anchor_asi_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.SignInActivity">

    <TextView
        android:id="@+id/text_asi_welcome"
        style="@style/TextWelcomePrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_welcome_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_outline_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_asi_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_asi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_asi_sign_in"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/sign_in" />

</LinearLayout>